# machine-factory

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  deny.toml  justfile  rustfmt.toml
examples/: README.md  camera.rs  http_request_builder.rs  traffic_light.rs  traffic_light_with_camera.rs
examples/state_machines/: camera.rs  http_request_builder.rs  mod.rs  traffic_light.rs
src/: deterministic_state_machine.rs  event_driven_finite_state_machine.rs  event_driven_state_machine.rs  event_enum.rs  event_trait.rs  lib.rs  state_enum.rs  state_machine.rs  state_trait.rs
tests/: state_machine.rs
